--- a/index.html
+++ b/index.html
@@ -11,49 +11,63 @@
     --gray-300:#cfd4dc;
   }
   *{box-sizing:border-box}
-  body{font-family:system-ui,Arial,sans-serif;background:#F9FAFB;color:#111;margin:0}
-  .container{width:100%;margin:0;padding:24px var(--pad)}
+  body{font-family:system-ui, Arial, sans-serif; background:#F9FAFB; color:#111; margin:0}
+  .container{width:100%; margin:0; padding:24px var(--pad)}
 
-  /* DO NOT CHANGE: PAGE 1 STYLES */
-  h1{font-size:20pt;margin:0 0 8px 0;line-height:1.2}
-  .subheader{font-size:18pt;margin:0 0 12px 0;font-weight:500}
-  h2.section-title{font-size:13pt;margin:16px 0 8px 0;line-height:1.25;font-weight:800;letter-spacing:.5px;text-transform:uppercase}
-  .intro{font-size:12pt;line-height:1.5;color:#333;margin:4px 0 14px 0}
+  /* ===== DO NOT CHANGE: PAGE 1 STYLES ===== */
+  h1{font-size:20pt; margin:0 0 8px 0; line-height:1.2}
+  .subheader{font-size:18pt; margin:0 0 12px 0; font-weight:500}
+  .section-title{font-size:13pt; margin:16px 0 8px 0; line-height:1.25; font-weight:800; letter-spacing:.5px; text-transform:uppercase}
+  .intro{font-size:12pt; line-height:1.5; color:#333; margin:4px 0 14px 0}
 
-  .progress{display:flex;gap:10px;margin:6px 0 16px 0}
-  .dot{width:10px;height:10px;border-radius:50%;background:var(--progress-gray);border:1px solid #e5e7eb}
-  .dot.active{background:var(--progress-red);border-color:var(--progress-red)}
+  .progress{display:flex; gap:10px; margin:6px 0 16px 0}
+  .dot{width:10px; height:10px; border-radius:50%; background:var(--progress-gray); border:1px solid #e5e7eb}
+  .dot.active{background:var(--progress-red); border-color:var(--progress-red)}
 
-  .row{display:grid;grid-template-columns:minmax(84px,var(--label-w)) 1fr;column-gap:var(--gap);align-items:center;margin:10px 0}
-  .row>label{font-size:10pt;font-weight:400;white-space:normal;word-break:break-word}
-  .row>input,.row>select{width:100%;padding:10px 12px;font-size:10pt;border:1px solid var(--gray-300);border-radius:10px;background:#fff;transition:box-shadow .15s,border-color .15s}
-  .row>input:focus,.row>select:focus{outline:none;border-color:rgba(30,144,255,.8);box-shadow:0 0 0 3px rgba(30,144,255,.18);background:#fff}
+  .row{display:grid; grid-template-columns:minmax(84px, var(--label-w)) 1fr; column-gap:var(--gap); align-items:center; margin:10px 0}
+  .row>label{font-size:10pt; font-weight:400; white-space:normal; word-break:break-word}
+  .row>input, .row>select{width:100%; padding:10px 12px; font-size:10pt; border:1px solid var(--gray-300); border-radius:10px; background:#fff; transition:box-shadow .15s, border-color .15s}
+  .row>input:focus, .row>select:focus{outline:none; border-color:rgba(30,144,255,.8); box-shadow:0 0 0 3px rgba(30,144,255,.18); background:#fff}
+  /* Keep fields white even when autofilled */
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  select:-webkit-autofill{ -webkit-box-shadow:0 0 0 1000px #fff inset; box-shadow:0 0 0 1000px #fff inset; background:#fff !important; }
   select:invalid{color:#aaa}
 
-  .actions{padding-left:calc(var(--label-w) + var(--gap));margin-top:14px;display:flex;gap:10px;justify-content:flex-end}
-  button{padding:14px 24px;border:none;border-radius:14px;background:var(--brand-blue);color:#fff;font-size:14pt;cursor:pointer}
-  .btn-secondary{background:#fff;color:#111;border:1px solid var(--gray-300)}
+  .actions{padding-left:calc(var(--label-w) + var(--gap)); margin-top:14px; display:flex; gap:10px; justify-content:flex-end}
+  button{padding:14px 24px; border:none; border-radius:14px; background:var(--brand-blue); color:#fff; font-size:14pt; cursor:pointer}
+  .btn-secondary{background:#fff; color:#111; border:1px solid var(--gray-300)}
 
-  /* DO NOT CHANGE: QUESTION FORMATTING */
-  .q-item{padding:12px 0;border-top:1px solid #e5e7eb}
-  .q-title{display:block;font-size:10pt;font-weight:700;margin:0 0 3px 0}
-  .q-sub{display:block;font-size:10pt;font-weight:400;margin:0 0 8px 0;color:#444}
-
-  .pill{display:inline-block;width:44px;height:44px;line-height:44px;text-align:center;border:1px solid #cfcfcf;border-radius:50%;margin-right:10px;cursor:pointer;user-select:none;font-size:18px}
-  .pill.selected{background:#1E90FF;color:#fff}
+  /* ===== DO NOT CHANGE: QUESTION FORMATTING =====
+     - Number in its own narrow column
+     - Statement and subtext align to same left margin (not under number)
+     - Both 10pt; statement bold, subtext normal
+  */
+  .q-item{padding:12px 0; border-top:1px solid #e5e7eb; display:grid; grid-template-columns: 26px 1fr; column-gap:8px; align-items:start}
+  .q-num{font-size:10pt; line-height:1.2; text-align:right; padding-top:2px; color:#111}
+  .q-body{display:block}
+  .q-title{display:block; font-size:10pt; font-weight:700; margin:0 0 3px 0; line-height:1.35}
+  .q-sub{display:block; font-size:10pt; font-weight:400; margin:0 0 8px 0; color:#444; line-height:1.35}
+  .pill{display:inline-block; width:44px; height:44px; line-height:44px; text-align:center; border:1px solid #cfcfcf; border-radius:50%; margin-right:10px; cursor:pointer; user-select:none; font-size:18px}
+  .pill.selected{background:#1E90FF; color:#fff}
 
   /* Score page */
-  .score-kicker{font-size:14px;color:#666;margin:12px 0 8px 0}
-  .score-big{font-size:32px;font-weight:800;margin:0 0 24px 0}
-  .gauge{position:relative;height:28px;border-radius:999px;background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
-  .gauge::after{content:"";position:absolute;top:-8px;bottom:-8px;width:10px;border-radius:6px;background:#333}
-  .rec-kicker{font-size:14px;color:#666;margin:24px 0 8px 0}
-  .rec-text{font-size:28px;font-weight:800;line-height:1.2;margin:0 0 8px 0}
+  .score-kicker{font-size:14px; color:#666; margin:12px 0 8px 0}
+  .score-big{font-size:32px; font-weight:800; margin:0 0 24px 0}
+  .gauge{position:relative; height:28px; border-radius:999px; background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
+  .gauge::after{content:""; position:absolute; top:-8px; bottom:-8px; width:10px; border-radius:6px; background:#333}
+  .rec-kicker{font-size:14px; color:#666; margin:24px 0 8px 0}
+  .rec-text{font-size:28px; font-weight:800; line-height:1.2; margin:0 0 8px 0}
 
-  .peer-box{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:16px;margin-top:8px}
-  .peer-box p{margin:0 0 10px 0;font-size:14px;color:#444}
+  .peer-box{background:#fff; border:1px solid #e5e7eb; border-radius:12px; padding:16px; margin-top:8px}
+  .peer-box p{margin:0 0 10px 0; font-size:14px; color:#444}
 
-  @media (max-width:340px){.row{grid-template-columns:1fr;row-gap:6px}.actions{padding-left:0}}
+  @media (max-width:340px){
+    .row{grid-template-columns:1fr; row-gap:6px}
+    .actions{padding-left:0}
+    .q-item{grid-template-columns:20px 1fr}
+  }
 </style>
 <script id="embeddedQuestions" type="application/json">[
   {
@@ -234,6 +248,255 @@
 ]</script>
 </head>
 <body>
-<!-- Body continues... -->
+  <main class="container">
+    <h1>BED HOSPITALITY 2.0</h1>
+    <p class="subheader">TEAM MEMBER FORM</p>
+    <div class="progress" id="progressHeader">
+      <span class="dot"></span><span class="dot"></span><span class="dot"></span>
+      <span class="dot"></span><span class="dot"></span><span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+
+    <!-- ===== DO NOT EDIT: PAGE 1 START ===== -->
+    <section id="welcome">
+      <h2 class="section-title">Your Information</h2>
+      <div class="row"><label for="nick">your name</label><input id="nick"></div>
+      <div class="row"><label for="email">your email</label><input id="email" type="email"></div>
+      <div class="row"><label for="hotel">your location</label>
+        <select id="hotel" required>
+          <option value="" disabled selected>select hotel</option>
+          <option>BED Changkian</option>
+          <option>BED Phrasing</option>
+          <option>BED Nimman</option>
+          <option>BED Chiangmai Gate</option>
+          <option>BED Flying</option>
+          <option>BED Support</option>
+        </select>
+      </div>
+
+      <h2 class="section-title">Peer Information</h2>
+      <p class="intro">after you completed your self assessment one of your peers will review you. select one of your team members who worked in BED for at least 12 months</p>
+      <div class="row"><label for="peerName">name peer</label><input id="peerName"></div>
+      <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email"></div>
+      <div class="row"><label for="peerHotel">peer location</label>
+        <select id="peerHotel" required>
+          <option value="" disabled selected>select hotel</option>
+          <option>BED Changkian</option>
+          <option>BED Phrasing</option>
+          <option>BED Nimman</option>
+          <option>BED Chiangmai Gate</option>
+          <option>BED Flying</option>
+          <option>BED Support</option>
+        </select>
+      </div>
+
+      <div class="actions">
+        <button id="toInstructions">Start</button>
+      </div>
+    </section>
+    <!-- ===== DO NOT EDIT: PAGE 1 END ===== -->
+
+    <!-- Instructions -->
+    <section id="instructions" style="display:none">
+      <h2 class="section-title">HOW TO ASSESS YOURSELF</h2>
+      <p class="intro">
+        Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know your own strengths and opportunities
+      </p>
+      <h2 class="section-title">HOW TO SCORE YOURSELF</h2>
+      <ul class="scale-list" style="list-style:none; padding:0; margin:10px 0">
+        <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:#1E90FF; color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">1</span> <span>I am not good at this</span></li>
+        <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:#1E90FF; color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">2</span> <span>I need to be better at this</span></li>
+        <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:#1E90FF; color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">3</span> <span>I am average at this</span></li>
+        <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:#1E90FF; color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">4</span> <span>I am good at this</span></li>
+        <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:#1E90FF; color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">5</span> <span>I am very good at this</span></li>
+      </ul>
+      <div class="actions">
+        <button class="btn-secondary" id="backToWelcome">Back</button>
+        <button id="toQ1">Start</button>
+      </div>
+    </section>
+
+    <!-- Questions Part 1 -->
+    <section id="q1" style="display:none">
+      <h2 class="section-title">STATEMENTS PART 1</h2>
+      <div id="list-q1"></div>
+      <div class="actions">
+        <button class="btn-secondary" id="backToInstructions">Back</button>
+        <button id="toQ2">Next</button>
+      </div>
+    </section>
+
+    <!-- Questions Part 2 -->
+    <section id="q2" style="display:none">
+      <h2 class="section-title">STATEMENTS PART 2</h2>
+      <div id="list-q2"></div>
+      <div class="actions">
+        <button class="btn-secondary" id="backToQ1">Back</button>
+        <button id="submitAll">Next</button>
+      </div>
+    </section>
+
+    <!-- Results -->
+    <section id="finish" style="display:none">
+      <h2 class="section-title">SELF-ASSESSMENT SCORE</h2>
+      <div class="score-kicker">your self assessment results</div>
+      <div id="scorePercent" class="score-big">YOUR SCORE IS —%</div>
+      <div class="gauge" id="gauge"></div>
+      <div class="rec-kicker">our suggestion and recommendation</div>
+      <div id="recText" class="rec-text">—</div>
+      <div class="actions">
+        <button class="btn-secondary" id="backToQ2">Back</button>
+        <button id="nextToPeer">Next</button>
+      </div>
+    </section>
+
+    <!-- Peer Assessment Landing -->
+    <section id="peer" style="display:none">
+      <h2 class="section-title">PEER ASSESSMENT</h2>
+      <div class="peer-box">
+        <p>Now it’s your peer’s turn. We’ll send the review to:</p>
+        <p><strong id="peerNameOut">—</strong> (<span id="peerEmailOut">—</span>) at <span id="peerHotelOut">—</span>.</p>
+        <p>Tap <strong>Start peer assessment</strong> to continue.</p>
+      </div>
+      <div class="actions">
+        <button class="btn-secondary" id="backToFinish">Back</button>
+        <button id="peerStart">Start peer assessment</button>
+      </div>
+    </section>
+  </main>
+
+<script>
+(function(){
+  const S = {answers:{}, questions:[]};
+  try { S.questions = JSON.parse(document.getElementById('embeddedQuestions').textContent) || []; }
+  catch(e) { S.questions = []; }
+
+  const el = id => document.getElementById(id);
+  const sections = ['welcome','instructions','q1','q2','finish','peer'];
+
+  function show(id){
+    sections.forEach(s => el(s).style.display = (s===id ? 'block' : 'none'));
+    let n = 1;
+    if(id==='instructions') n = 2;
+    else if(id==='q1') n = 3;
+    else if(id==='q2') n = 4;
+    else if(id==='finish') n = 5;
+    else if(id==='peer') n = 6;
+    setProgress(n);
+    window.scrollTo({top:0, behavior:'smooth'});
+  }
+
+  function setProgress(n){
+    const dots = document.querySelectorAll('#progressHeader .dot');
+    dots.forEach((d,i)=>d.classList.toggle('active', i < n));
+  }
+  setProgress(1);
+
+  function stripLeadingNumber(t){
+    return String(t).replace(/^\s*\d+\.\s*/, '');
+  }
+
+  function makeQ(q, ord){
+    const wrap = document.createElement('div');
+    wrap.className = 'q-item';
+    wrap.dataset.qid = q.id;
+
+    const num = document.createElement('div');
+    num.className = 'q-num';
+    num.textContent = ord + '.';
+    wrap.appendChild(num);
+
+    const body = document.createElement('div');
+    body.className = 'q-body';
+
+    const title = document.createElement('span');
+    title.className = 'q-title';
+    title.textContent = stripLeadingNumber(q.statement || '');
+    body.appendChild(title);
+
+    if(q.subtext){
+      const sub = document.createElement('span');
+      sub.className = 'q-sub';
+      sub.textContent = q.subtext;
+      body.appendChild(sub);
+    }
+
+    for(let v=1; v<=5; v++){
+      const p = document.createElement('span');
+      p.className = 'pill';
+      p.textContent = v;
+      p.dataset.val = v;
+      p.onclick = () => { 
+        S.answers[q.id] = v;
+        wrap.querySelectorAll('.pill').forEach(x => x.classList.toggle('selected', x===p));
+      };
+      body.appendChild(p);
+    }
+
+    wrap.appendChild(body);
+    return wrap;
+  }
+
+  // Navigation
+  el('toInstructions').onclick = () => show('instructions');
+  el('backToWelcome').onclick = () => show('welcome');
+  el('toQ1').onclick = () => { 
+    const l = el('list-q1'); l.innerHTML = '';
+    (S.questions || []).slice(0,18).forEach((q,i)=> l.appendChild(makeQ(q, i+1)));
+    show('q1');
+  };
+  el('backToInstructions').onclick = () => show('instructions');
+  el('toQ2').onclick = () => { 
+    const l = el('list-q2'); l.innerHTML = '';
+    (S.questions || []).slice(18,35).forEach((q,i)=> l.appendChild(makeQ(q, 19+i)));
+    show('q2');
+  };
+  el('backToQ1').onclick = () => show('q1');
+
+  // Submit + score (bands + marker)
+  el('submitAll').onclick = () => { 
+    const ids = (S.questions || []).map(q => q.id);
+    const answered = ids.filter(id => S.answers[id] != null);
+    const total = answered.reduce((sum,id) => sum + Number(S.answers[id]||0), 0);
+    const avg = answered.length ? total / answered.length : 0;
+    const pct = answered.length ? Math.round(((avg - 1) / 4) * 100) : 0;
+
+    document.getElementById('scorePercent').textContent = 'YOUR SCORE IS ' + pct + '%';
+
+    const gauge = document.getElementById('gauge');
+    gauge.style.setProperty('--marker', pct + '%');
+    gauge.style.position = 'relative';
+    let markerStyle = document.getElementById('markerStyle');
+    if(!markerStyle){ 
+      markerStyle = document.createElement('style');
+      markerStyle.id = 'markerStyle';
+      document.head.appendChild(markerStyle);
+    }
+    markerStyle.textContent = '.gauge::after{left: calc(var(--marker) - 5px);}';
+    
+    let rec = '';
+    if(pct < 50) rec = 'Keep practicing!\nFocus on one habit at a time.';
+    else if(pct < 70) rec = 'Good effort!\nPick two areas to improve next.';
+    else if(pct < 85) rec = 'Great hospitality!\nKeep challenging yourself';
+    else rec = 'Excellent!\nBe a coach for your peers';
+    document.getElementById('recText').innerHTML = rec.replace(/\n/g,'<br>');
+
+    // Prefill peer summary
+    document.getElementById('peerNameOut').textContent = (document.getElementById('peerName').value || '—');
+    document.getElementById('peerEmailOut').textContent = (document.getElementById('peerEmail').value || '—');
+    document.getElementById('peerHotelOut').textContent = (document.getElementById('peerHotel').value || '—');
+
+    show('finish');
+  };
+
+  // Score page buttons
+  document.getElementById('backToQ2').onclick = () => show('q2');
+  document.getElementById('nextToPeer').onclick = () => show('peer');
+
+  // Peer page
+  document.getElementById('backToFinish').onclick = () => show('finish');
+  document.getElementById('peerStart').onclick = () => console.log('Peer assessment flow starts');
+})();
+</script>
 </body>
 </html>
