--- a/index.html
+++ b/index.html
@@ -36,19 +36,20 @@
 
   /* ===== DO NOT CHANGE: QUESTION FORMATTING =====
      - Statements bold, subtext normal
-     - Both at 12px font size
+     - Increased to 15px to match reference
      - Number has its own column; statement & subtext align flush-left
   */
   .q-item{padding:12px 0; border-top:1px solid #e5e7eb; display:grid; grid-template-columns: 26px 1fr; column-gap:8px; align-items:start}
   .q-num{font-size:12px; line-height:1.2; text-align:right; padding-top:2px; color:#111}
   .q-body{display:block}
-  .q-title{display:block; font-size:12px; font-weight:700; margin:0 0 3px 0; line-height:1.35}
-  .q-sub{display:block; font-size:12px; font-weight:400; margin:0 0 8px 0; color:#444; line-height:1.35}
+  .q-title{display:block; font-size:15px; font-weight:700; margin:0 0 3px 0; line-height:1.35}
+  .q-sub{display:block; font-size:15px; font-weight:400; margin:0 0 8px 0; color:#444; line-height:1.35}
 
   /* ===== DO NOT CHANGE: ANSWER PILL SIZE =====
-     - Pill circle 30px; number 30px
+     - Keep pill circle 30px
+     - Reduce number to 16px for balance (smaller than circle)
   */
-  .pill{display:inline-block; width:30px; height:30px; line-height:30px; text-align:center; border:1px solid #cfcfcf; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; font-size:30px}
+  .pill{display:inline-block; width:30px; height:30px; line-height:30px; text-align:center; border:1px solid #cfcfcf; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; font-size:16px}
   .pill.selected{background:#1E90FF; color:#fff}
 
   /* Score page */
